[tool.poetry]
name = "py-neo-umls-syncer"
version = "1.0.0"
description = "A production-ready Python package for creating and maintaining a UMLS Labeled Property Graph (LPG) in Neo4j (v5.x)."
authors = ["Jules the AI Engineer"]
readme = "README.md"
packages = [{include = "pyNeoUmlsSyncer", from = "src"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["rich"], version = "^0.9.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
requests = "^2.31.0"
tqdm = "^4.66.0"
neo4j = "^5.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
testcontainers = {extras = ["neo4j"], version = "^3.7.0"}
mypy = "^1.7.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# This section makes the CLI command available after 'pip install'
[tool.poetry.scripts]
py-neo-umls-syncer = "pyNeoUmlsSyncer.cli:app"
