[tool.poetry]
name = "pyNeoUmlsSyncer"
version = "0.1.0"
description = "A production-ready Python package for creating and maintaining a UMLS Labeled Property Graph (LPG) in Neo4j."
authors = ["Jules"]
readme = "README.md"
packages = [{include = "pyNeoUmlsSyncer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pydantic-settings = "^2.1.0"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.31.0"
rich = "^13.7.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
testcontainers = {extras = ["neo4j"], version = "^3.7.1"}
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-neo-umls-syncer = "pyNeoUmlsSyncer.cli:app"
