[tool.poetry]
name = "py_neo_umls_syncer"
version = "0.1.0"
description = "A production-ready Python package for creating and maintaining a UMLS Labeled Property Graph (LPG) in Neo4j."
authors = ["Jules <<<Jules>>>"]
license = "MIT"
packages = [{include = "py_neo_umls_syncer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
bmt = "*"
pandas = "^2.1.4"
pytest = "^7.4.3"
testcontainers = {extras = ["neo4j"], version = "^3.7.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
