[tool.poetry]
name = "py_neo_umls_syncer"
version = "0.1.0"
description = "A production-ready Python package for creating and maintaining a UMLS Labeled Property Graph (LPG) in Neo4j."
authors = ["Gowtham Adamane Rao <rao@ohdsi.org>"]
readme = "README.md"
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
typer = {extras = ["all"], version = "^0.9.0"}
pytest = "^7.4.3"
testcontainers = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
